src/CBindings/libfdtLite.rs

unsafe extern "C" {
    #[doc = " fdt_header_size_ - internal function to get header size from a version number\n @version: device tree version number\n\n Return: size of DTB header in bytes"]
    pub fn fdt_header_size_(version: u32_) -> size;
}
unsafe extern "C" {
    #[doc = " fdt_check_header - sanity check a device tree header\n @fdt: pointer to data which might be a flattened device tree\n\n fdt_check_header() checks that the given buffer contains what\n appears to be a flattened device tree, and that the header contains\n valid information (to the extent that can be determined from the\n header alone).\n\n returns:\n     0, if the buffer appears to contain a valid device tree\n     -FDT_ERR_BADMAGIC,\n     -FDT_ERR_BADVERSION,\n     -FDT_ERR_BADSTATE,\n     -FDT_ERR_TRUNCATED, standard meanings, as above"]
    pub fn fdt_check_header(fdt: *const core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_move - move a device tree around in memory\n @fdt: pointer to the device tree to move\n @buf: pointer to memory where the device is to be moved\n @bufsize: size of the memory space at buf\n\n fdt_move() relocates, if possible, the device tree blob located at\n fdt to the buffer at buf of size bufsize.  The buffer may overlap\n with the existing device tree blob at fdt.  Therefore,\n     fdt_move(fdt, fdt, fdt_totalsize(fdt))\n should always succeed.\n\n returns:\n     0, on success\n     -FDT_ERR_NOSPACE, bufsize is insufficient to contain the device tree\n     -FDT_ERR_BADMAGIC,\n     -FDT_ERR_BADVERSION,\n     -FDT_ERR_BADSTATE, standard meanings"]
    pub fn fdt_move(
        fdt: *const core::ffi::c_void,
        buf: *mut core::ffi::c_void,
        bufsize: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_check_full(fdt: *const core::ffi::c_void, bufsize: size) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_get_string - retrieve a string from the strings block of a device tree\n @fdt: pointer to the device tree blob\n @stroffset: offset of the string within the strings block (native endian)\n @lenp: optional pointer to return the string's length\n\n fdt_get_string() retrieves a pointer to a single string from the\n strings block of the device tree blob at fdt, and optionally also\n returns the string's length in *lenp.\n\n returns:\n     a pointer to the string, on success\n     NULL, if stroffset is out of bounds, or doesn't point to a valid string"]
    pub fn fdt_get_string(
        fdt: *const core::ffi::c_void,
        stroffset: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_string - retrieve a string from the strings block of a device tree\n @fdt: pointer to the device tree blob\n @stroffset: offset of the string within the strings block (native endian)\n\n fdt_string() retrieves a pointer to a single string from the\n strings block of the device tree blob at fdt.\n\n returns:\n     a pointer to the string, on success\n     NULL, if stroffset is out of bounds, or doesn't point to a valid string"]
    pub fn fdt_string(
        fdt: *const core::ffi::c_void,
        stroffset: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_find_max_phandle - find and return the highest phandle in a tree\n @fdt: pointer to the device tree blob\n @phandle: return location for the highest phandle value found in the tree\n\n fdt_find_max_phandle() finds the highest phandle value in the given device\n tree. The value returned in @phandle is only valid if the function returns\n success.\n\n returns:\n     0 on success or a negative error code on failure"]
    pub fn fdt_find_max_phandle(
        fdt: *const core::ffi::c_void,
        phandle: *mut u32_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_generate_phandle - return a new, unused phandle for a device tree blob\n @fdt: pointer to the device tree blob\n @phandle: return location for the new phandle\n\n Walks the device tree blob and looks for the highest phandle value. On\n success, the new, unused phandle value (one higher than the previously\n highest phandle value in the device tree blob) will be returned in the\n @phandle parameter.\n\n Return: 0 on success or a negative error-code on failure"]
    pub fn fdt_generate_phandle(
        fdt: *const core::ffi::c_void,
        phandle: *mut u32_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_num_mem_rsv - retrieve the number of memory reserve map entries\n @fdt: pointer to the device tree blob\n\n Returns the number of entries in the device tree blob's memory\n reservation map.  This does not include the terminating 0,0 entry\n or any other (0,0) entries reserved for expansion.\n\n returns:\n     the number of entries"]
    pub fn fdt_num_mem_rsv(fdt: *const core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_get_mem_rsv - retrieve one memory reserve map entry\n @fdt: pointer to the device tree blob\n @n: index of reserve map entry\n @address: pointer to 64-bit variable to hold the start address\n @size: pointer to 64-bit variable to hold the size of the entry\n\n On success, @address and @size will contain the address and size of\n the n-th reserve map entry from the device tree blob, in\n native-endian format.\n\n returns:\n     0, on success\n     -FDT_ERR_BADMAGIC,\n     -FDT_ERR_BADVERSION,\n     -FDT_ERR_BADSTATE, standard meanings"]
    pub fn fdt_get_mem_rsv(
        fdt: *const core::ffi::c_void,
        n: core::ffi::c_int,
        address: *mut u64_,
        size: *mut u64_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_subnode_offset_namelen(
        fdt: *const core::ffi::c_void,
        parentoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_subnode_offset - find a subnode of a given node\n @fdt: pointer to the device tree blob\n @parentoffset: structure block offset of a node\n @name: name of the subnode to locate\n\n fdt_subnode_offset() finds a subnode of the node at structure block\n offset parentoffset with the given name.  name may include a unit\n address, in which case fdt_subnode_offset() will find the subnode\n with that unit address, or the unit address may be omitted, in\n which case fdt_subnode_offset() will find an arbitrary subnode\n whose name excluding unit address matches the given name.\n\n returns:\n\tstructure block offset of the requested subnode (>=0), on success\n\t-FDT_ERR_NOTFOUND, if the requested subnode does not exist\n\t-FDT_ERR_BADOFFSET, if parentoffset did not point to an FDT_BEGIN_NODE\n\t\ttag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings."]
    pub fn fdt_subnode_offset(
        fdt: *const core::ffi::c_void,
        parentoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_path_offset_namelen(
        fdt: *const core::ffi::c_void,
        path: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_path_offset - find a tree node by its full path\n @fdt: pointer to the device tree blob\n @path: full path of the node to locate\n\n fdt_path_offset() finds a node of a given path in the device tree.\n Each path component may omit the unit address portion, but the\n results of this are undefined if any such path component is\n ambiguous (that is if there are multiple nodes at the relevant\n level matching the given component, differentiated only by unit\n address).\n\n If the path is not absolute (i.e. does not begin with '/'), the\n first component is treated as an alias.  That is, the property by\n that name is looked up in the /aliases node, and the value of that\n property used in place of that first component.\n\n For example, for this small fragment\n\n / {\n     aliases {\n         i2c2 = &foo; // RHS compiles to \"/soc@0/i2c@30a40000/eeprom@52\"\n     };\n     soc@0 {\n         foo: i2c@30a40000 {\n             bar: eeprom@52 {\n             };\n         };\n     };\n };\n\n these would be equivalent:\n\n   /soc@0/i2c@30a40000/eeprom@52\n   i2c2/eeprom@52\n\n returns:\n\tstructure block offset of the node with the requested path (>=0), on\n\t\tsuccess\n\t-FDT_ERR_BADPATH, given path does not begin with '/' and the first\n\t\tcomponent is not a valid alias\n\t-FDT_ERR_NOTFOUND, if the requested node does not exist\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings."]
    pub fn fdt_path_offset(
        fdt: *const core::ffi::c_void,
        path: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_get_name - retrieve the name of a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: structure block offset of the starting node\n @lenp: pointer to an integer variable (will be overwritten) or NULL\n\n fdt_get_name() retrieves the name (including unit address) of the\n device tree node at structure block offset nodeoffset.  If lenp is\n non-NULL, the length of this name is also returned, in the integer\n pointed to by lenp.\n\n returns:\n\tpointer to the node's name, on success\n\t\tIf lenp is non-NULL, *lenp contains the length of that name\n\t\t\t(>=0)\n\tNULL, on error\n\t\tif lenp is non-NULL *lenp contains an error code (<0):\n\t\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE\n\t\t\ttag\n\t\t-FDT_ERR_BADMAGIC,\n\t\t-FDT_ERR_BADVERSION,\n\t\t-FDT_ERR_BADSTATE, standard meanings"]
    pub fn fdt_get_name(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_first_property_offset - find the offset of a node's first property\n @fdt: pointer to the device tree blob\n @nodeoffset: structure block offset of a node\n\n fdt_first_property_offset() finds the first property of the node at\n the given structure block offset.\n\n returns:\n\tstructure block offset of the property (>=0), on success\n\t-FDT_ERR_NOTFOUND, if the requested node has no properties\n\t-FDT_ERR_BADOFFSET, if nodeoffset did not point to an FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings."]
    pub fn fdt_first_property_offset(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_next_property_offset - step through a node's properties\n @fdt: pointer to the device tree blob\n @offset: structure block offset of a property\n\n fdt_next_property_offset() finds the property immediately after the\n one at the given structure block offset.  This will be a property\n of the same node as the given property.\n\n returns:\n\tstructure block offset of the next property (>=0), on success\n\t-FDT_ERR_NOTFOUND, if the given property is the last in its node\n\t-FDT_ERR_BADOFFSET, if nodeoffset did not point to an FDT_PROP tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings."]
    pub fn fdt_next_property_offset(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
